# tf_strategy

./: .flake8  .gitignore  Makefile  README.md  abmacd.py  abmacd_dt.py  abmacd_ru_backtesting.py  abmacd_strategy_model.py  abmacd_v2.py  backtesting.py  backtesting_tool.py  backtesting_v2.py  barg.py  data_downloader.py  ft_bargenerator.py  macd_sm.py  macd_sm_test.py  optimization.py  pyproject.toml  ru_backtesting.py  ru_backtesting_util.py  ru_bt_run.py  ru_opt_full_param_util.py  setup.cfg  test_barg.py  xvnpy_backtesting.py
abmacd/: __init__.py  abmacd_strategy_model.py  abmacd_v2.py  abmacd_v3.py  abmacd_v3_vnpys.py  ft_bargenerator.py  single_macd.py  test_barg.py
abmacd/signal_model/: macd_sm.py
abmacd/strategy_model/: __init__.py  abmacd_strategy_model.py  builder.py  mswap_helper.py  single_macd_strategy_model.py  stoploss_helper.py  v2_abmacd_ma_filter.py  v3_abmacd.py
abmacd/strategy_model/riskctl_model/: stop_loss.py
abmacd/strategy_model/signal_model/: ma_filter_sm.py  macd_sm.py  macd_sm_test.py
abmacd/strategy_model/trader_model/: base_trader_model.py  v2_tm.py
backtesting/ru/: backtesting.py  compare.py  config.py  util.py
dual_thrust/: __init__.py  dual_thrust_v1.py  dual_thrust_vnpys.py  ft_bargenerator.py
dual_thrust/strategy_model/: v1_dual_thrust.py
dual_thrust/strategy_model/signal_model/: dual_thrust_sm.py
scripts/ci/: lint.sh
xbacktesting/: __init__.py  ru_bt.py  timer.py  x_optimizer.py  xvnpy_backtesting.py
