[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xtfsm"
version = "0.2.2"
description = "trend following."
keywords = ["quant", "trading"]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = ["vnpy == 3.0.0", "vnpy_ctastrategy == 1.0.8"]

[tool.setuptools.package-dir]
abmacd = "abmacd"
dual_thrust = "dual_thrust"

[tool.autopep8]
max_line_length = 150
recursive = true
aggressive = 3

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
# # disallow_subclassing_any = true
disallow_any_generics = true
# # disallow_untyped_calls = true
# # disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
# # disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
