[metadata]
name = abmacd
version = 0.2.2
author = Xib
author_email = xib1102@icloud.com
description = trend following.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xib1uvXi/tf_strategy
license = MIT
license_files = LICENSE
keywords =
    quant
    trading
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
project_urls =
	Documentation = https://github.com/Xib1uvXi/tf_strategy

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
* = *.dll, *.so, *.pyd